--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <main id="Main">
                 <div class="MainWrapper">
                     <div class="ProfilePict">
-                        <img src="Images/Profile.JPG" alt="Profile Picture">
+                        <img src="Profile.JPG" alt="Profile Picture">
                     </div>
 
                     <div class="Name">
@@ -53,8 +53,8 @@
                             I'm proficient with Graphic Designing and 3D Modelling, using Adobe Softwares like Photoshop, 
                             Illustrator, Premiere, After Effects and Blender for 3D. I also have a basic skill with HTML and CSS.<br>
                             <br>
-                            I always eager to learn new things and always honing my Graphic Designing and Programming skills 
-                            to be the best out there. I can work as an individual or as a team, and interested with new people."</p>
+                            <span>I always eager to learn new things and always honing my Graphic Designing and Programming skills 
+                            to be the best out there. I can work as an individual or as a team, and interested with new people."</span></p>
                     </div>
 
                     <div class="JobJudul">
@@ -67,8 +67,7 @@
                         </div>
                         <br>
                         <p>"As a Graphic Designer for 2 months<br>Designing various things<br>like wallpaper and name card<br>Handling many big clients like Lazada"</p>
-                        <br>
-                        <p>From January 2018 - March 2018</p>
+                        <p class="Timeline">From January 2018 - March 2018</p>
                     </div>
 
                     <div class="Job2 Jobs">
@@ -77,8 +76,7 @@
                         </div>
                         <br>
                         <p>"As a Photo Editor for 2 months<br>Retouching photos like food and models<br>Handling many big clients and famous<br>celebrity like Citilink and Baim Wong"</p>
-                        <br>
-                        <p>From August 2019 - October 2019</p>
+                        <p class="Timeline">From August 2019 - October 2019</p>
                     </div>
 
                     <div class="Job3 Jobs">
@@ -87,8 +85,7 @@
                         </div>
                         <br>
                         <p>"As a Photo Editor for 4 months<br>Cropping and Retouching models<br>Handling many clients from worldwide"</p>
-                        <br>
-                        <p>From October 2019 - February 2020</p>
+                        <p class="Timeline">From October 2019 - February 2020</p>
                     </div>
 
                 </div>
