--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <main id="Main">
                 <div class="MainWrapper">
                     <div class="ProfilePict">
-                        <img src="Profile.JPG" alt="Profile Picture">
+                        <img src="Images/Profile.JPG" alt="Profile Picture">
                     </div>
 
                     <div class="Name">
