update: added age function

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div class="about-box">
                 <h2 class="about-title">About Me</h2>
                 <p class="about-description">
-                    My name is <span>Romi Fauzaan</span>, I'm <span id="age">19</span> years old, I live in <span>Indonesia</span>.<br><br>
+                    My name is <span>Romi Fauzaan</span>, I'm <span id="age"></span> years old, I live in <span>Indonesia</span>.<br><br>
 
                     I'm interested in programming since I was in Junior High School, but I have no idea where to start, <br>
                     so I'm searching on google and discovering C#. Unfortunately, I'm having a hard time <br>
