--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link rel="icon" type="image/png" href="./Assets/Logo_Romi_Only.png" />
         <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     </head>
-    <body>
+    <body ontouchstart>
 
         <header id="header">
             <div class="logoContainer" >
