--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         <section id="brief" class="sections">
             <h1 class="brief-title-main">Hello!</h1>
-            <h1 class="brief-title-second">I'm <span>Romi</span>, nice to meet you!</h1>
+            <h1 class="brief-title-second">I'm <span>Romi</span>, nice to meet you!!</h1>
             <h2 class="brief-title-third">Let's create a <span>nice Website!</span></h2>
             <div class="buttons-container">
                 <div class="single-button-wrapper">
